--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,10 +5,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "4a827c6803e94a553dbe7dc94c9d076e6f0bad10",
+   "rev": "e281dfd3dc43502533ddb10312cf1904dd0b7b0e",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "lean-pr-testing-4678",
+   "inputRev": "nightly-testing",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/quote4",
