chore(RepresentationTheory): rename FdRep to FDRep (#14309)
As discussed on [Zulip](https://leanprover.zulipchat.com/#narrow/stream/287929-mathlib4/topic/Representation.20Theory.20API.20Improvement.20.281.3F.29/near/443728543)

--- a/docs/overview.yaml
+++ b/docs/overview.yaml
@@ -145,9 +145,9 @@ General algebra:
 
   Representation theory:
     representation : 'Representation'
-    category of finite dimensional representations : 'FdRep'
-    character : 'FdRep.character'
-    orthogonality of characters : 'FdRep.char_orthonormal'
+    category of finite dimensional representations : 'FDRep'
+    character : 'FDRep.character'
+    orthogonality of characters : 'FDRep.char_orthonormal'
 
 Linear algebra:
   Fundamentals:
