rename: `no_lost_declarations` to `declarations_diff` and `short` as default option (#14105)
This PR renames the `no_lost_declarations` script to `declarations_diff`, to better describe the effect of the script.  It was originally intended as a script to make sure that "moving" PRs did not leave out any declaration, but is now used as a measure of the diff in declarations between PRs and master.

The other change it does is to make the `short` option the default, as this is the most commonly used.

|Old|New|
|-|-|
|`./scripts/no_lost_declarations.sh short`|`./scripts/declarations_diff.sh`|
|`./scripts/no_lost_declarations.sh`|`./scripts/declarations_diff.sh long`|

Mostly, these changes are invisible, as this script is used almost exclusively by CI, but the intention is that the change conveys better what script does to a human.

--- a/.github/workflows/PR_summary.yml
+++ b/.github/workflows/PR_summary.yml
@@ -45,7 +45,7 @@ jobs:
         # Compute the counts for the merge base
         python ./scripts/count-trans-deps.py "Mathlib/" > base.json
 
-        # switch back to the current branch: the `no_lost_declarations` script should be here
+        # switch back to the current branch: the `declarations_diff` script should be here
         git checkout "${currentHash}"
     - name: Post or update the summary comment
       env:
@@ -69,7 +69,7 @@ jobs:
         fi
 
         ## Declarations' diff comment
-        declDiff=$(./scripts/no_lost_declarations.sh short)
+        declDiff=$(./scripts/declarations_diff.sh)
         if [ "$(printf '%s' "${declDiff}" | wc -l)" -gt 15 ]
         then
           declDiff="$(printf '<details><summary>\n\n%s\n\n</summary>\n\n%s\n\n</details>\n' "#### Declarations diff" "${declDiff}")"
