--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -39,7 +39,8 @@ jobs:
         with:
           token: "${{ secrets.NIGHTLY_TESTING }}"
           commit-message: "chore: update Mathlib dependencies ${{ env.timestamp }}"
-          branch: "for-bot-use-only-update-dependencies"
+          # this branch is referenced in update_dependencies_zulip.yml
+          branch: "update-dependencies-bot-use-only"
           base: master
           title: "${{ env.pr_title }}"
           body: "This PR updates the Mathlib dependencies."
