ci(nightly_detect_failure): update reminder message to mention script (#14795)
The script in scripts/create-adaptation-pr.sh can be used to
semi-automatically create PRs from nightly-testing to the bump branch.

The friendly bot now points to the script when posting a reminder.

--- a/.github/workflows/nightly_detect_failure.yml
+++ b/.github/workflows/nightly_detect_failure.yml
@@ -198,7 +198,10 @@ jobs:
             }
             response = client.get_messages(request)
             messages = response['messages']
+            bump_branch_suffix = bump_branch.replace('bump/', '')
             payload = f"🛠️: it looks like it's time to create a new bump/nightly-{current_version} branch from nightly-testing, and then PR that to {bump_branch}."
+            payload += "To do so semi-automatically, run the following script from mathlib root:\n\n"
+            payload += f"```bash\n./scripts/create-adaptation-pr.sh {bump_branch_suffix} {current_version}\n```\n"
             if not messages or messages[0]['content'] != payload:
                 # Post the reminder message
                 request = {
