--- a/.github/workflows/build.yml.in
+++ b/.github/workflows/build.yml.in
@@ -234,8 +234,8 @@ jobs:
         uses: liskin/gh-problem-matcher-wrap@v3
         with:
           linters: gcc
+          # make sure everything is available for test/import_all.lean
           run: |
-            # make sure everything is available for import_all.lean
             lake build Batteries Qq Aesop ProofWidgets
             lake test
 
