--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -256,9 +256,8 @@ jobs:
         with:
           linters: gcc
           # make sure everything is available for test/import_all.lean
-          run: |
-            lake build Batteries Qq Aesop ProofWidgets
-            lake test
+          run:
+            lake build Batteries Qq Aesop ProofWidgets && lake test
 
       - name: check for unused imports
         id: shake
