--- a/.github/workflows/nightly_detect_failure.yml
+++ b/.github/workflows/nightly_detect_failure.yml
@@ -220,5 +220,7 @@ jobs:
                 }
                 result = client.send_message(request)
                 print(result)
+                else:
+                    print('The strings match!')
         else:
             print('No action needed.')
