chore: benchmarking Aesop with HashSet Nat

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -25,10 +25,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "2c39748d927749624f480b641f1d2d77b8632b92",
+   "rev": "fbb365cc565553e7eed29662d473701cf9c12d09",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "master",
+   "inputRev": "hash_set_nat",
    "inherited": false,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/ProofWidgets4",
