--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -65,10 +65,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "97cdb15283aa1e3b58fc87d3fedd28bb0a18215a",
+   "rev": "5f3c33d7f641d26bd013d8bb4cafcb5ccce53dc4",
    "name": "LeanSearchClient",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "5f3c33d7f641d26bd013d8bb4cafcb5ccce53dc4",
    "inherited": false,
    "configFile": "lakefile.toml"}],
  "name": "mathlib",
