moveLeanSearchClient back to main

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -65,10 +65,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "5f3c33d7f641d26bd013d8bb4cafcb5ccce53dc4",
+   "rev": "339b8319a251b29672c8340a1c2bf18ee5181ef2",
    "name": "LeanSearchClient",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "5f3c33d7f641d26bd013d8bb4cafcb5ccce53dc4",
+   "inputRev": "main",
    "inherited": false,
    "configFile": "lakefile.toml"}],
  "name": "mathlib",
