--- a/.github/build.in.yml
+++ b/.github/build.in.yml
@@ -210,7 +210,7 @@ jobs:
         run: |
           if [ ${{ steps.mk_all.outputs.mk_all }} == "false" ]
           then
-            echo "Please run 'lake exe mk_all' to regenerated the import all files"
+            echo "Please run 'lake exe mk_all' to regenerate the import all files"
             exit 1
           fi
 
