fixes for leanprover/lean4#5380

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,10 +5,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "a1e0c27faaab8f63ddd7ab27d49c8bd2572c9656",
+   "rev": "016fdbe41f6bcc22c0e8e3d6b062899d64e3839e",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing-2024-09-17",
+   "inputRev": "lean-pr-testing-5380",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/quote4",
