--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -65,10 +65,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "3e9460c40e09457b2fd079ef55316535536425fc",
+   "rev": "860de618d20edc6ed060ee412511e5f08a000de2",
    "name": "LeanSearchClient",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "loogle_nonreserved",
    "inherited": false,
    "configFile": "lakefile.toml"}],
  "name": "mathlib",
