chore: adaptations for nightly-2024-09-18 (#16938)
Co-authored-by: leanprover-community-mathlib4-bot <leanprover-community-mathlib4-bot@users.noreply.github.com>
Co-authored-by: Kim Morrison <kim@tqft.net>

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,7 +5,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "a17594a6f3a185ac6e5a29945d331fc98880a07a",
+   "rev": "ae25a540a8c627df32476a1878118b44c097032f",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
    "inputRev": "nightly-testing",
@@ -25,7 +25,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "c86be574747cad59dac2a9bbfa57cfceb326c1a3",
+   "rev": "61fb4d1a2a6a4fe4be260ca31c58af1234ff298b",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -61,11 +61,11 @@
    "inputRev": "main",
    "inherited": false,
    "configFile": "lakefile.toml"},
-  {"url": "https://github.com/leanprover-community/LeanSearchClient.git",
+  {"url": "https://github.com/leanprover-community/LeanSearchClient",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "9bca41a05f83ca85a1cfc3379c748797e8d0b434",
+   "rev": "565ce2c97c20428195f8e7861cc0fb1f537e4d25",
    "name": "LeanSearchClient",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
