--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -18,4 +18,5 @@ jobs:
           close-pr-message: 'Comment on the staled PRs while closed'
           days-before-stale: 60
           days-before-close: 120
+          # search string from the Zulip #queue link at https://bit.ly/3Ymuh0U
           only-matching-filter: '[ "is:open is:pr -is:draft sort:updated-asc -label:blocked-by-other-PR -label:merge-conflict status:success -label:awaiting-CI -label:WIP -label:awaiting-author base:master -label:delegated -label:auto-merge-after-CI -label:ready-to-merge" ]'
