--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,10 +5,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "a2714af202f191255907ef7c560cc636d4f02a7b",
+   "rev": "94eb0ee7b63c66e2714a7c9d17c841fb01269542",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing-2024-09-19",
+   "inputRev": "lean-pr-testing-5405",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/quote4",
