--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,10 +5,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "a2714af202f191255907ef7c560cc636d4f02a7b",
+   "rev": "cb166e8d3e5c868b6be92be05773c4a91281e292",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing-2024-09-19",
+   "inputRev": "lean-pr-testing-5403",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/quote4",
