--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -19,4 +19,7 @@ jobs:
           days-before-stale: 60
           days-before-close: 120
           # search string from the Zulip #queue link at https://bit.ly/3Ymuh0U
-          only-matching-filter: '[ "is:open is:pr -is:draft sort:updated-asc -label:blocked-by-other-PR -label:merge-conflict status:success -label:awaiting-CI -label:WIP -label:awaiting-author base:master -label:delegated -label:auto-merge-after-CI -label:ready-to-merge" ]'
+          # "is:open is:pr -is:draft sort:updated-asc -label:blocked-by-other-PR -label:merge-conflict status:success -label:awaiting-CI -label:WIP -label:awaiting-author base:master -label:delegated -label:auto-merge-after-CI -label:ready-to-merge"
+          # We want PRs _not_ on the queue, so we keep "is:pr -is:draft base:master" (is:open is added by the action by default) as a prefix for all queries and then negate the rest of the params in separate queries to simulate boolean OR (see https://github.com/actions/stale/pull/1145)
+          # except for label:auto-merge-after-CI and label:ready-to-merge which presumably will be noticed before they go stale
+          only-matching-filter: '[ "is:pr -is:draft base:master label:blocked-by-other-PR", "is:pr -is:draft base:master label:merge-conflict", "is:pr -is:draft base:master -status:success", "is:pr -is:draft base:master label:awaiting-CI", "is:pr -is:draft base:master label:WIP", "is:pr -is:draft base:master label:awaiting-author", "is:pr -is:draft base:master label:delegated" ]'
