--- a/.github/workflows/autolabel_action.yaml
+++ b/.github/workflows/autolabel_action.yaml
@@ -24,8 +24,10 @@ jobs:
           curl -sSfL https://github.com/leanprover/elan/releases/download/v3.1.1/elan-x86_64-unknown-linux-gnu.tar.gz | tar xz
           ./elan-init -y --default-toolchain none
           echo "$HOME/.elan/bin" >> "${GITHUB_PATH}"
-
+      - run: |
+          lake exe autolabel
       - name: Auto-label script
+        if: false
         run: |
           # the checkout dance, to avoid a detached head
           git checkout master
