--- a/.github/workflows/autolabel_action.yaml
+++ b/.github/workflows/autolabel_action.yaml
@@ -25,7 +25,7 @@ jobs:
           ./elan-init -y --default-toolchain none
           echo "$HOME/.elan/bin" >> "${GITHUB_PATH}"
       - run: |
-          lake exe autolabel
+          lake exe autolabel $NUMBER
       - name: Auto-label script
         if: false
         run: |
