--- a/.github/workflows/autolabel_action.yaml
+++ b/.github/workflows/autolabel_action.yaml
@@ -25,7 +25,11 @@ jobs:
           ./elan-init -y --default-toolchain none
           echo "$HOME/.elan/bin" >> "${GITHUB_PATH}"
       - run: |
-          lake exe autolabel $NUMBER
+          lake exe autolabel "$NUMBER"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_REPO: ${{ github.repository }}
+          NUMBER: ${{ github.event.number }}
       - name: Auto-label script
         if: false
         run: |
