--- a/.github/workflows/add_label_from_diff.yaml
+++ b/.github/workflows/add_label_from_diff.yaml
@@ -1,9 +1,13 @@
 name: Autolabel PRs
 
-on: pull_request
+on:
+  pull_request:
+    types: [opened]
+  workflow_dispatch:
 
 jobs:
-  apply_one_t_label:
+  add_topic_label:
+    name: Add topic label
     runs-on: ubuntu-latest
     # Don't run on forks, where we wouldn't have permissions to add the label anyway.
     if: github.repository == 'leanprover-community/mathlib4'
