--- a/.github/workflows/add_label_from_diff.yaml
+++ b/.github/workflows/add_label_from_diff.yaml
@@ -3,6 +3,10 @@ name: Autolabel PRs
 on:
   pull_request:
     types: [opened]
+  push:
+    paths:
+      - scripts/autolabel.lean
+      - .github/workflows/add_label_from_diff.yaml
 
 jobs:
   add_topic_label:
