--- a/.github/workflows/add_label_from_diff.yaml
+++ b/.github/workflows/add_label_from_diff.yaml
@@ -38,7 +38,7 @@ jobs:
 
           { LABELS="$(lake exe autolabel "$NUMBER" | tee /dev/fd/3 | sed -n "s/Applicable labels: #\[\(.*\)\].*/\1/p")"; } 3>&1
 
-          printf '## Autolabel\nModified files in this PR suggest the following lables:\n\n%s' "$LABELS" >> "${GITHUB_STEP_SUMMARY}"
+          printf '## Autolabel\nModified files in this PR suggest the following labels:\n\n%s' "$LABELS" >> "${GITHUB_STEP_SUMMARY}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
