--- a/.github/workflows/add_label_from_diff.yaml
+++ b/.github/workflows/add_label_from_diff.yaml
@@ -35,10 +35,10 @@ jobs:
           # the checkout dance, to avoid a detached head
           git checkout master
           git checkout -
-
+          # find applicable labels, try to apply them if relevant, and store them as variable.
           { LABELS="$(lake exe autolabel "$NUMBER" | tee /dev/fd/3 | sed -n "s/Applicable labels: #\[\(.*\)\].*/\1/p")"; } 3>&1
-
-          printf '## Autolabel\nModified files in this PR suggest the following labels:\n\n%s' "$LABELS" >> "${GITHUB_STEP_SUMMARY}"
+          # print github action step summary
+          printf 'Modified files in this PR suggest the following labels:\n\n%s' "$LABELS" >> "${GITHUB_STEP_SUMMARY}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
