chore: bump Batteries

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,14 +1,14 @@
 {"version": "1.1.0",
  "packagesDir": ".lake/packages",
  "packages":
- [{"url": "https://github.com/pimotte/batteries",
+ [{"url": "https://github.com/leanprover-community/batteries",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "fa853a12cd0e4b163c5eddc41a43fd87c9bed314",
+   "rev": "82c92a6f46dff1c0c8a93a132d9f33953e4246ee",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "getElem_tail_lemmas",
+   "inputRev": "main",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/quote4",
