--- a/.github/workflows/add_label_from_diff.yaml
+++ b/.github/workflows/add_label_from_diff.yaml
@@ -13,7 +13,8 @@ jobs:
     name: Add topic label
     runs-on: ubuntu-latest
     # Don't run on forks, where we wouldn't have permissions to add the label anyway.
-    if: github.repository == 'leanprover-community/mathlib4'
+    # Don't run on PRs not going into `master` as script compares changes against `master`.
+    if: github.repository == 'leanprover-community/mathlib4' && github.head_ref == 'master'
     permissions:
       issues: write
       checks: write
