--- a/.github/workflows/add_label_from_diff.yaml
+++ b/.github/workflows/add_label_from_diff.yaml
@@ -13,8 +13,7 @@ jobs:
     name: Add topic label
     runs-on: ubuntu-latest
     # Don't run on forks, where we wouldn't have permissions to add the label anyway.
-    # Don't run on PRs not going into `master` as script compares changes against `master`.
-    if: github.repository == 'leanprover-community/mathlib4' && github.head_ref == 'master'
+    if: github.repository == 'leanprover-community/mathlib4'
     permissions:
       issues: write
       checks: write
@@ -41,3 +40,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
           NUMBER: ${{ github.event.number }}
+
+      - name: debug
+        run: echo "$HEAD_REF"
+        env:
+          HEAD_REF: ${{ github.head_ref}}
