--- a/.github/workflows/add_label_from_diff.yaml
+++ b/.github/workflows/add_label_from_diff.yaml
@@ -24,6 +24,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: debug
+        run: |
+          echo "$XY"
+          echo "$GITHUB_BASE_REF"
+        env:
+          XY: ${{ github.base_ref }}
       - name: install elan
         run: |
           set -o pipefail
@@ -40,8 +46,3 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
           NUMBER: ${{ github.event.number }}
-
-      - name: debug
-        run: echo "$HEAD_REF"
-        env:
-          HEAD_REF: ${{ github.head_ref}}
