oops, fix bump of batteries

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,10 +5,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "b81bcb1f44eb7623ff49e71f4da58e473ae9d4c4",
+   "rev": "e7da8aa8232793f23492830aa0a11dece54371a2",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "lean-pr-testing-5520",
+   "inputRev": "nightly-testing",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/quote4",
