ci(update_dependencies_zulip): Add actionable message when lake update fails

--- a/.github/workflows/update_dependencies_zulip.yml
+++ b/.github/workflows/update_dependencies_zulip.yml
@@ -40,7 +40,7 @@ jobs:
                 });
               }
             } else {
-              output += "No PR found for this run!";
+              output += "No PR found for this run! Please run `lake update` on master and make a PR.";
             }
             return output;
 
