remove the label if there are no large imports

--- a/.github/workflows/PR_summary.yml
+++ b/.github/workflows/PR_summary.yml
@@ -71,7 +71,8 @@ jobs:
         [ -n "${high_percentages}" ] && {
           high_percentages=$'\n\n'"${high_percentages}"
           gh pr edit "${PR}" --add-label large-import
-        }
+        } || # otherwise, we remove the label
+          gh pr edit "${PR}" --remove-label large-import
 
         if [ "$(printf '%s' "${importCount}" | wc -l)" -gt 12 ]
         then
