trigger the workflow when `lean-toolchain` on `nightly-testing` has changed

--- a/.github/workflows/discover-lean-pr-testing.yml
+++ b/.github/workflows/discover-lean-pr-testing.yml
@@ -3,10 +3,9 @@ name: Discover `lean-pr-testing` branches
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - nightly-testing
+    paths:
+      - lean-toolchain
 
 jobs:
   discover-lean-pr-testing:
