--- a/.github/workflows/bump_merge_master.yml
+++ b/.github/workflows/bump_merge_master.yml
@@ -19,7 +19,7 @@ jobs:
       id: find-bump-branch
       run: |
         BUMP_BRANCH=$(git branch -r | grep 'bump/v4' | sed 's|origin/||' | sort -V | tail -n 1)
-        echo "bump_branch=$BUMP_BRANCH" >> $GITHUB_OUTPUT
+        echo "bump_branch=$BUMP_BRANCH" >> "$GITHUB_OUTPUT"
 
     - name: Checkout the bump branch
       run: git checkout "${{ steps.find-bump-branch.outputs.bump_branch }}"
@@ -39,12 +39,12 @@ jobs:
             git add lean-toolchain
             git commit -m "Resolved conflict in lean-toolchain"
           else
-            echo "multiple_conflicts=true" >> $GITHUB_ENV
+            echo "multiple_conflicts=true" >> "$GITHUB_ENV"
           fi
         fi
 
     - name: Commit and create PR for multiple conflicts
-      if: env.multiple_conflicts == 'true'
+      if: ${{ env.multiple_conflicts == 'true' }}
       run: |
         DATE=$(date +'%Y-%m-%d-%H-%M')
         NEW_BRANCH="bump-merge-master-$DATE"
@@ -55,18 +55,18 @@ jobs:
         BUMP_BRANCH="${{ steps.find-bump-branch.outputs.bump_branch }}"
         PR_URL=$(gh pr create --title "nightly-testing: resolve conflicts with master" --base "$BUMP_BRANCH")
         PR_NUMBER=$(echo "$PR_URL" | grep -oP '\d+$')
-        echo "new_branch=$NEW_BRANCH" >> $GITHUB_ENV
-        echo "pr_number=$PR_NUMBER" >> $GITHUB_ENV
+        echo "new_branch=$NEW_BRANCH" >> "$GITHUB_ENV"
+        echo "pr_number=$PR_NUMBER" >> "$GITHUB_ENV"
 
     - name: Push changes if merge was successful
-      if: success() && env.multiple_conflicts != 'true'
+      if: ${{ success() && env.multiple_conflicts != 'true' }}
       run: |
         git push origin "${{ steps.find-bump-branch.outputs.bump_branch }}"
 
   notify-failure:
     runs-on: ubuntu-latest
     needs: bump-merge
-    if: failure() || env.multiple_conflicts == 'true'
+    if: ${{ failure() || env.multiple_conflicts == 'true' }}
     steps:
     - name: Send message on Zulip about merge conflicts
       uses: zulip/github-actions-zulip/send-message@v1
