--- a/.github/workflows/discover-lean-pr-testing.yml
+++ b/.github/workflows/discover-lean-pr-testing.yml
@@ -42,7 +42,7 @@ jobs:
         NIGHTLY_URL="https://github.com/leanprover/lean4-nightly.git"
         
         # Create a temporary directory for cloning
-        cd $(mktemp -d)
+        cd "$(mktemp -d)"
         
         # Clone the repository with a depth of 30 (adjust as needed)
         git clone --depth 30 "$NIGHTLY_URL"
