--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -65,7 +65,7 @@ jobs:
 
         # stage the changes in git so that `git diff` can confirm what changed
         git add -u
-        git diff HEAD #lakefile.lean Mathlib/Init.lean Mathlib/Init.lean Mathlib/Tactic/MinImports.lean
+        git diff HEAD #lakefile.lean Mathlib/Init.lean Mathlib/Tactic/MinImports.lean
 
     - name: build mathlib
       id: build
