--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -73,11 +73,11 @@ jobs:
       with:
         linters: gcc
         run: |
-          lake build
+          lake build Mathlib.Data.Nat.Choose.Basic
 
     - name: Full report
       run: |
-        lake build | sed -z 's=\n\n*\([^⚠w]\)= \1=g' |
+        lake build Mathlib.Data.Nat.Choose.Basic | sed -z 's=\n\n*\([^⚠w]\)= \1=g' |
           awk -F: 'BEGIN{max=0}
             /^⚠/{ print currMax; max=0 }
             (max < $3) {
@@ -101,9 +101,8 @@ jobs:
         baseURL='https://github.com/leanprover-community/mathlib4/commit'
         refCommit=${{ github.sha }}
 
-        {
         printf $'summary<<EOF\n%s\nEOF' "$(
-          lake build | sed -z 's=\n\n*\([^⚠w]\)= \1=g' |
+          lake build Mathlib.Data.Nat.Choose.Basic | sed -z 's=\n\n*\([^⚠w]\)= \1=g' |
             awk -F: 'BEGIN{max=0}
               /^⚠/{ print currMax; max=0 }
               (max < $3) {
@@ -125,10 +124,9 @@ jobs:
                 con++
                 printf("| %s | %s | %s | %s |\n", $2, $3, $5, $6)
             }'
-          )"
-        printf '\n\nReference commit [%s](%s)\n' "${refCommit:0:10}"  "${baseURL}/${refCommit}"
-        printf '[Full report](https://github.com/%s/actions/runs/%s)\n' "${{ github.repository }}" "${{ github.run_id }}"
-        } | tee "$GITHUB_OUTPUT"
+          printf '\n\nReference commit [%s](%s)\n' "${refCommit:0:10}"  "${baseURL}/${refCommit}"
+          printf '[Full report](https://github.com/%s/actions/runs/%s)\n' "${{ github.repository }}" "${{ github.run_id }}"
+        )" | tee "$GITHUB_OUTPUT"
 
     - name: Post output to Zulip
       uses: zulip/github-actions-zulip/send-message@v1
