--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -67,7 +67,7 @@ jobs:
         git add -u
         git diff HEAD #lakefile.lean Mathlib/Init.lean Mathlib/Tactic/MinImports.lean
 
-        printf $'\n\nRunning a test `lake build` to verify, for instance, the absence of import loops\n'
+        printf $'\n\nRunning a test %slake build` to verify, for instance, the absence of import loops\n' "`"
         lake build Mathlib.Init
 
     - name: build mathlib
