--- a/.github/workflows/latest_import.yml
+++ b/.github/workflows/latest_import.yml
@@ -37,8 +37,8 @@ jobs:
         echo "$HOME/.elan/bin" >> "${GITHUB_PATH}"
 
     - uses: actions/checkout@v4
-      with:
-        ref: 'master'
+      #with:
+      #  ref: 'master'
 
     - name: If using a lean-pr-release toolchain, uninstall
       run: |
